core/src/com/kyper/yarn/compiler/YarnSpinnerParser.java
// Generated from grammarFork/YarnSpinnerParser.g4 by ANTLR 4.7.1
package com.kyper.yarn.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YarnSpinnerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, WS=3, NEWLINE=4, ID=5, BODY_START=6, HEADER_DELIMITER=7, 
		HASHTAG=8, REST_OF_LINE=9, HEADER_NEWLINE=10, COMMENT=11, BODY_WS=12, 
		BODY_NEWLINE=13, BODY_COMMENT=14, BODY_END=15, SHORTCUT_ARROW=16, COMMAND_START=17, 
		OPTION_START=18, FORMAT_FUNCTION_START=19, BODY_HASHTAG=20, TEXT_NEWLINE=21, 
		TEXT_HASHTAG=22, TEXT_EXPRESSION_START=23, TEXT_COMMAND_START=24, TEXT_FORMAT_FUNCTION_START=25, 
		TEXT_COMMENT=26, TEXT=27, TEXT_FRAG=28, TEXT_COMMANDHASHTAG_WS=29, TEXT_COMMANDHASHTAG_COMMENT=30, 
		TEXT_COMMANDHASHTAG_COMMAND_START=31, TEXT_COMMANDHASHTAG_HASHTAG=32, 
		TEXT_COMMANDHASHTAG_NEWLINE=33, TEXT_COMMANDHASHTAG_ERROR=34, HASHTAG_WS=35, 
		HASHTAG_TAG=36, HASHTAG_TEXT=37, FORMAT_FUNCTION_WS=38, FORMAT_FUNCTION_ID=39, 
		FORMAT_FUNCTION_NUMBER=40, FORMAT_FUNCTION_EXPRESSION_START=41, FORMAT_FUNCTION_EQUALS=42, 
		FORMAT_FUNCTION_STRING=43, FORMAT_FUNCTION_END=44, EXPR_WS=45, KEYWORD_TRUE=46, 
		KEYWORD_FALSE=47, KEYWORD_NULL=48, OPERATOR_ASSIGNMENT=49, OPERATOR_LOGICAL_LESS_THAN_EQUALS=50, 
		OPERATOR_LOGICAL_GREATER_THAN_EQUALS=51, OPERATOR_LOGICAL_EQUALS=52, OPERATOR_LOGICAL_LESS=53, 
		OPERATOR_LOGICAL_GREATER=54, OPERATOR_LOGICAL_NOT_EQUALS=55, OPERATOR_LOGICAL_AND=56, 
		OPERATOR_LOGICAL_OR=57, OPERATOR_LOGICAL_XOR=58, OPERATOR_LOGICAL_NOT=59, 
		OPERATOR_MATHS_ADDITION_EQUALS=60, OPERATOR_MATHS_SUBTRACTION_EQUALS=61, 
		OPERATOR_MATHS_MULTIPLICATION_EQUALS=62, OPERATOR_MATHS_MODULUS_EQUALS=63, 
		OPERATOR_MATHS_DIVISION_EQUALS=64, OPERATOR_MATHS_ADDITION=65, OPERATOR_MATHS_SUBTRACTION=66, 
		OPERATOR_MATHS_MULTIPLICATION=67, OPERATOR_MATHS_DIVISION=68, OPERATOR_MATHS_MODULUS=69, 
		LPAREN=70, RPAREN=71, COMMA=72, STRING=73, FUNC_ID=74, EXPRESSION_END=75, 
		EXPRESSION_COMMAND_END=76, VAR_ID=77, NUMBER=78, COMMAND_WS=79, COMMAND_IF=80, 
		COMMAND_ELSEIF=81, COMMAND_ELSE=82, COMMAND_SET=83, COMMAND_ENDIF=84, 
		COMMAND_CALL=85, COMMAND_END=86, COMMAND_TEXT_END=87, COMMAND_EXPRESSION_START=88, 
		COMMAND_TEXT=89, OPTION_NEWLINE=90, OPTION_WS=91, OPTION_END=92, OPTION_DELIMIT=93, 
		OPTION_EXPRESSION_START=94, OPTION_FORMAT_FUNCTION_START=95, OPTION_TEXT=96, 
		OPTION_ID_WS=97, OPTION_ID=98;
	public static final int
		RULE_dialogue = 0, RULE_file_hashtag = 1, RULE_node = 2, RULE_header = 3, 
		RULE_body = 4, RULE_statement = 5, RULE_line_statement = 6, RULE_line_formatted_text = 7, 
		RULE_format_function = 8, RULE_key_value_pair = 9, RULE_hashtag = 10, 
		RULE_line_condition = 11, RULE_expression = 12, RULE_value = 13, RULE_variable = 14, 
		RULE_function = 15, RULE_if_statement = 16, RULE_if_clause = 17, RULE_else_if_clause = 18, 
		RULE_else_clause = 19, RULE_set_statement = 20, RULE_call_statement = 21, 
		RULE_command_statement = 22, RULE_command_formatted_text = 23, RULE_shortcut_option_statement = 24, 
		RULE_shortcut_option = 25, RULE_option_statement = 26, RULE_option_formatted_text = 27;
	public static final String[] ruleNames = {
		"dialogue", "file_hashtag", "node", "header", "body", "statement", "line_statement", 
		"line_formatted_text", "format_function", "key_value_pair", "hashtag", 
		"line_condition", "expression", "value", "variable", "function", "if_statement", 
		"if_clause", "else_if_clause", "else_clause", "set_statement", "call_statement", 
		"command_statement", "command_formatted_text", "shortcut_option_statement", 
		"shortcut_option", "option_statement", "option_formatted_text"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'---'", null, null, null, null, null, 
		null, null, null, "'==='", "'->'", null, "'[['", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'='", null, "']'", null, "'true'", 
		"'false'", "'null'", null, null, null, null, null, null, null, null, null, 
		null, null, "'+='", "'-='", "'*='", "'%='", "'/='", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'('", "')'", "','", null, null, "'}'", null, null, null, 
		null, null, null, null, null, "'endif'", null, null, null, null, null, 
		null, null, "']]'", "'|'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INDENT", "DEDENT", "WS", "NEWLINE", "ID", "BODY_START", "HEADER_DELIMITER", 
		"HASHTAG", "REST_OF_LINE", "HEADER_NEWLINE", "COMMENT", "BODY_WS", "BODY_NEWLINE", 
		"BODY_COMMENT", "BODY_END", "SHORTCUT_ARROW", "COMMAND_START", "OPTION_START", 
		"FORMAT_FUNCTION_START", "BODY_HASHTAG", "TEXT_NEWLINE", "TEXT_HASHTAG", 
		"TEXT_EXPRESSION_START", "TEXT_COMMAND_START", "TEXT_FORMAT_FUNCTION_START", 
		"TEXT_COMMENT", "TEXT", "TEXT_FRAG", "TEXT_COMMANDHASHTAG_WS", "TEXT_COMMANDHASHTAG_COMMENT", 
		"TEXT_COMMANDHASHTAG_COMMAND_START", "TEXT_COMMANDHASHTAG_HASHTAG", "TEXT_COMMANDHASHTAG_NEWLINE", 
		"TEXT_COMMANDHASHTAG_ERROR", "HASHTAG_WS", "HASHTAG_TAG", "HASHTAG_TEXT", 
		"FORMAT_FUNCTION_WS", "FORMAT_FUNCTION_ID", "FORMAT_FUNCTION_NUMBER", 
		"FORMAT_FUNCTION_EXPRESSION_START", "FORMAT_FUNCTION_EQUALS", "FORMAT_FUNCTION_STRING", 
		"FORMAT_FUNCTION_END", "EXPR_WS", "KEYWORD_TRUE", "KEYWORD_FALSE", "KEYWORD_NULL", 
		"OPERATOR_ASSIGNMENT", "OPERATOR_LOGICAL_LESS_THAN_EQUALS", "OPERATOR_LOGICAL_GREATER_THAN_EQUALS", 
		"OPERATOR_LOGICAL_EQUALS", "OPERATOR_LOGICAL_LESS", "OPERATOR_LOGICAL_GREATER", 
		"OPERATOR_LOGICAL_NOT_EQUALS", "OPERATOR_LOGICAL_AND", "OPERATOR_LOGICAL_OR", 
		"OPERATOR_LOGICAL_XOR", "OPERATOR_LOGICAL_NOT", "OPERATOR_MATHS_ADDITION_EQUALS", 
		"OPERATOR_MATHS_SUBTRACTION_EQUALS", "OPERATOR_MATHS_MULTIPLICATION_EQUALS", 
		"OPERATOR_MATHS_MODULUS_EQUALS", "OPERATOR_MATHS_DIVISION_EQUALS", "OPERATOR_MATHS_ADDITION", 
		"OPERATOR_MATHS_SUBTRACTION", "OPERATOR_MATHS_MULTIPLICATION", "OPERATOR_MATHS_DIVISION", 
		"OPERATOR_MATHS_MODULUS", "LPAREN", "RPAREN", "COMMA", "STRING", "FUNC_ID", 
		"EXPRESSION_END", "EXPRESSION_COMMAND_END", "VAR_ID", "NUMBER", "COMMAND_WS", 
		"COMMAND_IF", "COMMAND_ELSEIF", "COMMAND_ELSE", "COMMAND_SET", "COMMAND_ENDIF", 
		"COMMAND_CALL", "COMMAND_END", "COMMAND_TEXT_END", "COMMAND_EXPRESSION_START", 
		"COMMAND_TEXT", "OPTION_NEWLINE", "OPTION_WS", "OPTION_END", "OPTION_DELIMIT", 
		"OPTION_EXPRESSION_START", "OPTION_FORMAT_FUNCTION_START", "OPTION_TEXT", 
		"OPTION_ID_WS", "OPTION_ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YarnSpinnerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YarnSpinnerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DialogueContext extends ParserRuleContext {
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<File_hashtagContext> file_hashtag() {
			return getRuleContexts(File_hashtagContext.class);
		}
		public File_hashtagContext file_hashtag(int i) {
			return getRuleContext(File_hashtagContext.class,i);
		}
		public DialogueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialogue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterDialogue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitDialogue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitDialogue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DialogueContext dialogue() throws RecognitionException {
		DialogueContext _localctx = new DialogueContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dialogue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASHTAG) {
				{
				{
				setState(56);
				file_hashtag();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				node();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_hashtagContext extends ParserRuleContext {
		public TerminalNode HASHTAG() { return getToken(YarnSpinnerParser.HASHTAG, 0); }
		public TerminalNode HASHTAG_TEXT() { return getToken(YarnSpinnerParser.HASHTAG_TEXT, 0); }
		public TerminalNode TEXT_COMMANDHASHTAG_NEWLINE() { return getToken(YarnSpinnerParser.TEXT_COMMANDHASHTAG_NEWLINE, 0); }
		public File_hashtagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_hashtag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterFile_hashtag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitFile_hashtag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitFile_hashtag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_hashtagContext file_hashtag() throws RecognitionException {
		File_hashtagContext _localctx = new File_hashtagContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_hashtag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(HASHTAG);
			setState(68);
			match(HASHTAG_TEXT);
			setState(69);
			match(TEXT_COMMANDHASHTAG_NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public TerminalNode BODY_START() { return getToken(YarnSpinnerParser.BODY_START, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode BODY_END() { return getToken(YarnSpinnerParser.BODY_END, 0); }
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				header();
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(76);
			match(BODY_START);
			setState(77);
			body();
			setState(78);
			match(BODY_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Token header_key;
		public Token header_value;
		public TerminalNode HEADER_DELIMITER() { return getToken(YarnSpinnerParser.HEADER_DELIMITER, 0); }
		public TerminalNode HEADER_NEWLINE() { return getToken(YarnSpinnerParser.HEADER_NEWLINE, 0); }
		public TerminalNode ID() { return getToken(YarnSpinnerParser.ID, 0); }
		public TerminalNode REST_OF_LINE() { return getToken(YarnSpinnerParser.REST_OF_LINE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((HeaderContext)_localctx).header_key = match(ID);
			setState(81);
			match(HEADER_DELIMITER);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REST_OF_LINE) {
				{
				setState(82);
				((HeaderContext)_localctx).header_value = match(REST_OF_LINE);
				}
			}

			setState(85);
			match(HEADER_NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INDENT) | (1L << HASHTAG) | (1L << SHORTCUT_ARROW) | (1L << COMMAND_START) | (1L << OPTION_START) | (1L << FORMAT_FUNCTION_START) | (1L << BODY_HASHTAG) | (1L << TEXT_NEWLINE) | (1L << TEXT_HASHTAG) | (1L << TEXT_EXPRESSION_START) | (1L << TEXT_COMMAND_START) | (1L << TEXT_FORMAT_FUNCTION_START) | (1L << TEXT) | (1L << TEXT_COMMANDHASHTAG_COMMAND_START) | (1L << TEXT_COMMANDHASHTAG_HASHTAG) | (1L << TEXT_COMMANDHASHTAG_NEWLINE) | (1L << HASHTAG_TAG))) != 0)) {
				{
				{
				setState(87);
				statement();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Line_statementContext line_statement() {
			return getRuleContext(Line_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Set_statementContext set_statement() {
			return getRuleContext(Set_statementContext.class,0);
		}
		public Option_statementContext option_statement() {
			return getRuleContext(Option_statementContext.class,0);
		}
		public Shortcut_option_statementContext shortcut_option_statement() {
			return getRuleContext(Shortcut_option_statementContext.class,0);
		}
		public Call_statementContext call_statement() {
			return getRuleContext(Call_statementContext.class,0);
		}
		public Command_statementContext command_statement() {
			return getRuleContext(Command_statementContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(YarnSpinnerParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YarnSpinnerParser.DEDENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				line_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				if_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				set_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				option_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				shortcut_option_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				call_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				command_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				match(INDENT);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INDENT) | (1L << HASHTAG) | (1L << SHORTCUT_ARROW) | (1L << COMMAND_START) | (1L << OPTION_START) | (1L << FORMAT_FUNCTION_START) | (1L << BODY_HASHTAG) | (1L << TEXT_NEWLINE) | (1L << TEXT_HASHTAG) | (1L << TEXT_EXPRESSION_START) | (1L << TEXT_COMMAND_START) | (1L << TEXT_FORMAT_FUNCTION_START) | (1L << TEXT) | (1L << TEXT_COMMANDHASHTAG_COMMAND_START) | (1L << TEXT_COMMANDHASHTAG_HASHTAG) | (1L << TEXT_COMMANDHASHTAG_NEWLINE) | (1L << HASHTAG_TAG))) != 0)) {
					{
					{
					setState(101);
					statement();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(DEDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Line_statementContext extends ParserRuleContext {
		public Line_formatted_textContext line_formatted_text() {
			return getRuleContext(Line_formatted_textContext.class,0);
		}
		public TerminalNode TEXT_NEWLINE() { return getToken(YarnSpinnerParser.TEXT_NEWLINE, 0); }
		public TerminalNode TEXT_COMMANDHASHTAG_NEWLINE() { return getToken(YarnSpinnerParser.TEXT_COMMANDHASHTAG_NEWLINE, 0); }
		public Line_conditionContext line_condition() {
			return getRuleContext(Line_conditionContext.class,0);
		}
		public List<HashtagContext> hashtag() {
			return getRuleContexts(HashtagContext.class);
		}
		public HashtagContext hashtag(int i) {
			return getRuleContext(HashtagContext.class,i);
		}
		public Line_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).enterLine_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YarnSpinnerParserListener ) ((YarnSpinnerParserListener)listener).exitLine_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YarnSpinnerParserVisitor ) return ((YarnSpinnerParserVisitor<? extends T>)visitor).visitLine_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Line_statementContext line_statement() throws RecognitionException {
		Line_statementContext _localctx = new Line_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_line_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			line_formatted_text();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEXT_COMMAND_START || _la==TEXT_COMMANDHASHTAG_COMMAND_START) {
				{
				setState(111);
				line_condition();
				}
			}
